--- a/_data/lecture_monitorering_av_moln_applikationer.yml
+++ b/_data/lecture_monitorering_av_moln_applikationer.yml
@@ -7,6 +7,77 @@ topics:
     literatureTime: 0
     optionalLiteratureTime: 0
     description-include: monitoring_i_azure.md
+    literature:
+    - title: "Azure Monitor overview - Azure Monitor - Microsoft Docs"
+      url: https://docs.microsoft.com/en-us/azure/azure-monitor/overview
+      timeType: Article
+      timeMinutes: 0
+      timeBadge: dark
+      description: >
+        Lenght: 8
+        Overview of Microsoft services and functionalities that contribute to a complete monitoring strategy for your Azure services and applications.
+    optionalLiterature:
+    - title: "Analyzing your applications with Application Insights"
+      url: https://www.youtube.com/watch?v=pqZF8LjBh68
+      description: >
+        Application Insights is powerful Application Performance Management (APM) service for developers building application hosted in Azure, on-premise or elsewhere.
+        
+        Get your questions answered on the Microsoft Q&A for .NET - http://aka.ms/dotnet-qa​
+        Learn .NET with free self-guided learning from Microsoft Learn: http://aka.ms/learndotnet
+        
+        In this episode, we are joined by Michael Milirud (@micwebnet) who is a Product Manager on the Azure Monitoring team. He shows us how easy it is to get started with Application Insights with Visual Studio. He also discusses a few new features that you can make use of today such as Live Metrics, Load testing, and more.
+        
+        01:05 - When can Application Insights be used?
+        02:41 - Exploring the ApplicationInsights.config file
+        03:56 - Enabling the Application Insights experience in Visual Studio
+        05:13 - Live metrics in the Azure portal
+        06:09 - Adaptive Monitoring
+        08:40 - Portal experience
+        12:10 - Performance monitoring
+        14:03 - What types of applications can make use of Applications Insights?
+        15:10 - User Analytics
+        18:15 - Application Analytics with Kusto
+         
+        You can learn more about what Application Insights has to offer, how to use the Kusto query language and more using the links below.
+        
+        What is Application Insights?: https://docs.microsoft.com/en-us/azure/application-insights/app-insights-overview?WT.mc_id=ondotnet-channel9-cephilli
+        Azure Application Insights REST API docs: https://dev.applicationinsights.io/
+        Kusto query language: https://docs.loganalytics.io/
+        Create a Free Account (Azure): https://aka.ms/azft-net
+    - title: "Application Insights The Tool You Never Knew You Needed"
+      url: https://www.youtube.com/watch?v=SMGokUCi9oo
+      description: >
+        Announcing .NET Core 3.0: https://aka.ms/dotnetcore3 
+        
+        Application Insights empowers developers! By adding AI (not that one) to our apps, we have access to a rich set of data allowing us to have a better understanding of what our apps are doing. With this information, we have the ability to better triage issues as well as provide rich reports.
+    - title: "Azure Monitor and Azure Log Analytics: When to Use Which - DZone Big Data"
+      url: https://dzone.com/articles/azure-monitor-and-azure-log-analytics-when-to-use
+      description: >
+        Learn about Azure Monitor and Log Analytics, what recommended approaches for logging and monitoring are, abd how to ingest data with Monitor and Log Analytics.
+    - title: "Application Insights API for custom events and metrics - Azure Monitor"
+      url: https://docs.microsoft.com/en-us/azure/azure-monitor/app/api-custom-events-metrics
+      description: >
+        Insert a few lines of code in your device or desktop app, webpage, or service, to track usage and diagnose issues.
+    - title: "What is Azure Application Insights? - Azure Monitor"
+      url: https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview
+      description: >
+        Application Performance Management and usage tracking of your live web application.  Detect, triage and diagnose problems, understand how people use your app.
+    - title: "Monitor and debug - DevOps for ASP.NET Core Developers"
+      url: https://docs.microsoft.com/en-us/dotnet/architecture/devops-for-aspnet-developers/monitoring?view=aspnetcore-3.1
+      description: >
+        Monitoring and debugging your code as part of a DevOps solution with ASP.NET Core and Azure
+    - title: "Azure Monitor data platform - Azure Monitor"
+      url: https://docs.microsoft.com/en-us/azure/azure-monitor//data-platform
+      description: >
+        Monitoring data collected by Azure Monitor is separated into metrics that are lightweight and capable of supporting near real-time scenarios and logs that are used for advanced analysis.
+    - title: "Azure Monitor Application Insights Documentation - Azure Monitor"
+      url: https://docs.microsoft.com/en-us/azure/azure-monitor/azure-monitor-app-hub
+      description: >
+        Application Insights is part of the Azure Monitor service
+    - title: "Collect & analyze resource logs - Azure Container Instances"
+      url: https://docs.microsoft.com/en-us/azure/container-instances/container-instances-log-analytics
+      description: >
+        Learn how to send resource logs and event data from container groups in Azure Container Instances to Azure Monitor logs
   - topic: "Build measure learn"
     literatureTime: 9
     optionalLiteratureTime: 0
